--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-054W2GK5R7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-054W2GK5R7');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
